# C

./: CMakeLists.txt  README.md  hokus  hokus.c  intro  intro.c  zadanie 1  zadanie 1.c
architektura pc/: uloha 1  uloha 1.c
architektura pc/uloha 1.dSYM/Contents/: Info.plist
architekturapc/: CMakeLists.txt  blok2  blok2.c  inputFile.html  output.html  readme  uloha 1  uloha 1.c
architekturapc/blok 3/: CMakeLists.txt  main.c
architekturapc/blok2.dSYM/Contents/: Info.plist
architekturapc/code/: CMakeLists.txt  blokkk.c  udaje procesor.c
hokus.dSYM/Contents/: Info.plist
z2_clion_project/: CMakeLists.txt
z2_clion_project/src/: z2.c
z3/: CMakeLists.txt  z3.c
z4_project/: CMakeLists.txt
z4_project/src/: z4.c
z4_project/z4_testing/s1/: stdin_01.txt  stdin_02.txt  stdin_03.txt  stdin_04.txt  stdin_05.txt  stdin_06.txt  stdin_07.txt  stdin_08.txt  stdin_09.txt  stdout_01.txt  stdout_02.txt  stdout_03.txt  stdout_04.txt  stdout_05.txt  stdout_06.txt  stdout_07.txt  stdout_08.txt  stdout_09.txt
z4_project/z4_testing/s2/: stdin_01.txt  stdin_02.txt  stdin_03.txt  stdin_04.txt  stdin_05.txt  stdin_06.txt  stdin_07.txt  stdin_08.txt  stdin_09.txt  stdout_01.txt  stdout_02.txt  stdout_03.txt  stdout_04.txt  stdout_05.txt  stdout_06.txt  stdout_07.txt  stdout_08.txt  stdout_09.txt
z4_project/z4_testing/s3/: stdin_01.txt  stdin_02.txt  stdin_03.txt  stdin_04.txt  stdin_05.txt  stdin_06.txt  stdin_07.txt  stdin_08.txt  stdin_09.txt  stdout_01.txt  stdout_02.txt  (+7 more)
z5_project/: CMakeLists.txt
z5_project/src/: z5.c
zadanie 1.dSYM/Contents/: Info.plist
(+185 files in other folders)
